<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtView"
        android:layout_width="366dp"
        android:layout_height="424dp"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="bottom|end"
        android:hint="123456789"
        android:inputType="none"
        android:singleLine="false"
        android:textIsSelectable="true"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_negative"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="+/-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="="
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_negative"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus" />


    <Button
        android:id="@+id/btn_plus"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/btn_equal"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="4"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="5"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="6"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="7"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="8"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="9"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="x"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="c"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_brackets"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="()"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="%"
        app:layout_constraintBottom_toTopOf="@+id/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="/"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:foreground="@android:drawable/ic_input_delete"
        android:foregroundGravity="center"
        app:iconPadding="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn_divide"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>